# aichatbot

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  alembic.ini  app.py  architecture.md  auth.py  cache.py  config.py  database.py  dependencies.py  diagnose_products.py  docker-compose.yaml  fastwebapp.db  main.py  models.py  pyproject.toml  requirements.txt  run_ai.py  schemas.py  unnamed.patch  whatsapp.py
ai/: image_embeddings.py  models.py  prompts.py  run_ai.py  tools.py
alembic/: env.py
alembic/versions/: 1d625794c910_add_invoices_and_orders.py  656a0fa13557_.py  cbd845a10987_add_is_active_column_to_products.py  d6e5f539f0c3_added_image_embeddings_for_products_and_.py  dc5211b04f0a_add_reference_in_orders.py
migrations/: add_vector_extension.py
migrations/versions/: 3ddbd3915b6e_user_and_message_tables.py  636c5198400e_ai_persona.py  80a9bd125362_added_product_adn_business_tables.py  a89325500b19_add_phone_number_id_to_business.py  a909cb177f94_fresh_tables.py  bdeca9a336dc_changes_to_tables.py  dfe5ea1c0312_phone_number_id.py  e7e5163c2a50_.py
payment/: payment.py
routers/: businesses.py  chat.py  conversations.py  products.py  users.py
services/: notifications.py
static/css/: base.css  (+14 more)
templates/: base.html  chat.html  conversations.html  dashboard.html  email.html  error.html  index.html  login.html  products.html  settings.html  signup.html
whatsapp_bot/: .gitignore  ARCHITECTURE_COMPARISON.md  IMAGE_PROCESSING_GUIDE.md  README.md  REFACTORING.md  REFACTORING_COMPLETE.md  test_image_processing.py  test_refactoring.py  utils.py
(+9 files in other folders)
