[project]
name = "fastwebapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.128.8",
    "openai>=2.21.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "werkzeug>=3.1.5",
]
